[package]
name = "client-farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "~1.16"
solana-client = "~1.16"
ctf-solana-farm = { path = "../ctf" }
assert_matches = "1.4.0"
solana-logger = "~1.16"
solana-program-test = "~1.16"
solana-validator = "~1.16"
borsh = "0.10.3"
solana-program = "~1.16"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
spl-token = { version = "3.5.0", features = [ "no-entrypoint" ] }